--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-REACT_APP_EMAIL_USER=
-REACT_APP_EMAIL_PASSWORD=
-REACT_APP_EMAIL_HOST=
+REACT_APP_EMAIL_SERVICE_ID=
+REACT_APP_EMAIL_TEMPLATE_ID=
+REACT_APP_EMAIL_USERID=
